--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header></header>
     <main>
       <section class="test container">
         <img class="logo" src="assets/images/logo_sparrow.png" />
 
+
         <div class="headline-wrapper">
-          <h1>Play Flappy Spatz!</h1>
-          <h2>- coming soon -</h2>
+            <img class="teaser" src="assets/images/spatz-fun.jpg" />
         </div>
+
         <div class="button-wrapper">
           <a href="https://sprrw.de/impressum/" target="_blank">
-            <button>Impressum</button></a
+            Impressum</a
           >
           <a href="https://sprrw.de/datenschutzerklaerung/" target="_blank"
-            ><button>Datenschutzerklärung</button></a
+            >Datenschutzerklärung</a
           >
         </div>
       </section>
     </main>
-    <footer></footer>
   </body>
 </html>
