--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section class="test container">
         <img class="logo" src="assets/images/logo_sparrow.png" />
 
-
+        <p>- coming soon -</p>
         <div class="headline-wrapper">
             <img class="teaser" src="assets/images/spatz-fun.jpg" />
         </div>
